@startuml

title __MODELO's Class Diagram__\n

    namespace Modelo {
      class Modelo.ExtendedMatch {
          - ID : long
          - awayTeamID : long
          - awayTeamName : String
          - awayTeamScore : long
          - extendedDataIsSet : Boolean
          - head2headDraws : long
          - head2headMatches : long
          - head2headNumberOfGoals : long
          - head2headWonAwayTeam : long
          - head2headWonHomeTeam : long
          - homeTeamID : long
          - homeTeamName : String
          - homeTeamScore : long
          - matchDate : Date
          - matchDay : long
          - refereesName : List<String>
          - stadiumName : String
          + ExtendedMatch()
          + checkIfExtendedInfoIsSet()
          + checkIfTeamPlayed()
          + getAwayTeamID()
          + getAwayTeamName()
          + getAwayTeamScore()
          + getHead2headDraws()
          + getHead2headMatches()
          + getHead2headNumberOfGoals()
          + getHead2headWonAwayTeam()
          + getHead2headWonHomeTeam()
          + getHomeTeamID()
          + getHomeTeamName()
          + getHomeTeamScore()
          + getID()
          + getMatchDate()
          + getMatchDay()
          + getRefereesName()
          + getStadiumName()
          + setExtendedData()
          + toString()
          - parseScore()
      }
    }

  

    namespace Modelo {
      class Modelo.HTTPJSONGET {
          {static} + getDataFromURL()
      }
    }


    namespace Modelo {
      interface Modelo.IMatch {
          {abstract} + checkIfTeamPlayed()
          {abstract} + getAwayTeamID()
          {abstract} + getAwayTeamName()
          {abstract} + getAwayTeamScore()
          {abstract} + getHead2headDraws()
          {abstract} + getHead2headMatches()
          {abstract} + getHead2headNumberOfGoals()
          {abstract} + getHead2headWonAwayTeam()
          {abstract} + getHead2headWonHomeTeam()
          {abstract} + getHomeTeamID()
          {abstract} + getHomeTeamName()
          {abstract} + getHomeTeamScore()
          {abstract} + getID()
          {abstract} + getMatchDate()
          {abstract} + getMatchDay()
          {abstract} + getRefereesName()
          {abstract} + getStadiumName()
      }
    }


    namespace Modelo {
      class Modelo.LaLigaModel {
          - URL : String
          - gamesList : List<IMatch>
          {static} - modelInstance : LaLigaModel
          - teamList : List<Team>
          + getGamesList()
          {static} + getInstance()
          + getMatchByID()
          + getStandings()
          + getTeamById()
          + getTeamByName()
          + getTeamList()
          + initModel()
          + setStatsForTeam()
          - LaLigaModel()
          - setGamesList()
          - setPlayers()
          - setStandings()
          - setTeamList()
      }
    }

  

    namespace Modelo {
      class Modelo.MatchProxy {
          + MatchProxy()
          + checkIfTeamPlayed()
          + getAwayTeamID()
          + getAwayTeamName()
          + getAwayTeamScore()
          + getHead2headDraws()
          + getHead2headMatches()
          + getHead2headNumberOfGoals()
          + getHead2headWonAwayTeam()
          + getHead2headWonHomeTeam()
          + getHomeTeamID()
          + getHomeTeamName()
          + getHomeTeamScore()
          + getID()
          + getMatchDate()
          + getMatchDay()
          + getRefereesName()
          + getStadiumName()
          + toString()
      }
    }

  

    namespace Modelo {
      enum POSITIONS {
        Attacker
        Defender
        Goalkeeper
        Midfielder
      }
    }

  

    namespace Modelo {
      class Modelo.Player {
          - id : long
          - name : String
          - nationality : String
          + Player()
          + getId()
          + getName()
          + getNationality()
          + getPos()
          + setId()
      }
    }

  

    namespace Modelo {
      class Modelo.PruebasModelo {
          {static} + main()
      }
    }

  

    namespace Modelo {
      enum RESULT {
        DRAW
        LOST
        WON
      }
    }

  

    namespace Modelo {
      class Modelo.Standings {
          ~ standingsMap : Map<String, Long>
          + Standings()
          + getStandingsMap()
      }
    }

  

    namespace Modelo {
      class Modelo.Team {
          - goalsReceived : long
          - goalsScored : long
          - id : long
          - name : String
          - shortName : String
          - squad : List<Player>
          - teamStatsMap : Map<RESULT, Long>
          + Team()
          + addPlayerToSquad()
          + getGoalsReceived()
          + getGoalsScored()
          + getId()
          + getName()
          + getPlayerByID()
          + getShortName()
          + getSquad()
          + getTeamStatsMap()
          + setAllStats()
          + setId()
          + setName()
          + setShortName()
          + setSquad()
      }
    }

  

  Modelo.ExtendedMatch .up.|> Modelo.IMatch
  Modelo.LaLigaModel o-- Modelo.Standings : standings
  Modelo.MatchProxy .up.|> Modelo.IMatch
  Modelo.MatchProxy o-- Modelo.ExtendedMatch : extendedMatch
  Modelo.Player o-- Modelo.POSITIONS : position


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
